--- a/date.html
+++ b/date.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/modelo/assets01/css/date.css">
+    <link rel="stylesheet" href="/date.css">
 </head>
 <body>
     <section class="container">
      <h1> </h1>
     </section>
-  <script src="/modelo/assets01/js/date.js"></script>  
+  <script src="/date.js"></script>  
 </body>
 </html>
