--- a/date.html
+++ b/date.html
@@ -11,6 +11,6 @@
     <section class="container">
      <h1> </h1>
     </section>
-  <script src="/date.js"></script>  
+  <script src="/adate.js"></script>  
 </body>
 </html>
